--- a/app/globals.css
+++ b/app/globals.css
@@ -9,17 +9,11 @@
   }
 
   html {
-    overscroll-behavior: none;
-    height: 100%;
+    /* height: 100%; */
   }
 
   body {
-    overscroll-behavior: none;
-    min-height: 100%;
-  }
-
-  [data-slot="sidebar-inset"] {
-    overscroll-behavior: none;
+    /* min-height: 100%; */
   }
 
   body {
